# TENKi

./: .gitignore  CITATION.cff  CLAUDE.md  DONOR_FLIP_EXECUTION_PLAN.md  LICENSE  README.md  REAL_ASYNC_PEGKI_MF_OPTIMIZER_PLAN.md  TECHNICAL_REFERENCE.md  __init__.py  coverage_checker.py  gamut_sampler.py  paper_draft.md  pyproject.toml  run_open_questions.sh  sources_manifest.json  symmetry_group.py  visualizer.py
analysis/: __init__.py  adapters.py  flip_data.py  flip_metrics.py  flip_models.py  flip_reports.py  swarm_agents.py  swarm_consensus.py
docs/: TECHNICAL_REFERENCE.md
domains/: __init__.py  color_mixing.py  jarvis_leaderboard.py  materials_project.py  polymer_hardness.py
experiments/: 01_characterize_gamuts.py  01_venn_geometry.py  02_directed_transfer_matrix.py  02_orbit_coverage.py  03_swarm_flip_test.py  03_tiling_number.py  04_flip_feasibility.py  04_subgroup_analysis.py  05_study_comparison.py  06_symmetry_scoring.py  07_frugal_twin_convergence.py  08_multifidelity_allocation.py  09_mixed_source_flip.py  10_aggregation_helps_prediction.py  11_multi_domain_flip.py  12_ensemble_vs_swarm.py  13_async_mf_optimizer.py  14_open_questions_matrix.py  15_q1_mirror_pair_test.py  16_q2_epsilon_symmetry.py  17_q3_nash_equilibrium.py  18_q4_diversity_allocation.py  19_q5_robot_difficulty.py  20_q6_per_policy_rho.py  21_q7_trueskill2.py  22_q9_flip_difficulty.py  23_q10_swarm_specialists.py
optimizer/: __init__.py  executor.py  objective.py  pegki_bridge.py  policies.py  runtime_model.py  scheduler.py  store.py  types.py
results/: aggregation_comparison.json  (+22 more)
(+3 files in other folders)
